--- a/src/components/Product.module.css
+++ b/src/components/Product.module.css
@@ -34,9 +34,14 @@
     justify-content: space-around;
  
 }
-/* .ul > li{
+.ul > li{
     list-style-type: none;
-}  */
+} 
+.ul > li > button{
+    border: none;
+    cursor: pointer;
+    background: none;
+}
 
 
 .productmaindiv{
@@ -44,7 +49,7 @@
     /* height:300px; */
     /* background-color: red; */
     /* color:blue; */
-    border:1px solid green;
+    /* border:1px solid green; */
     margin:auto;
     display: flex;
     flex-wrap: wrap;
@@ -53,13 +58,16 @@
 .itemdiv{
     width:298px;
     height:376px;
-    border:1px solid brown;
+    /* border:1px solid brown; */
     margin:0px 0px 85px;
+}
+.itemdiv:hover{
+    border: 1px solid grey;
 }
 .imgdiv{
     width:254px;
     height:160px;
-    border:1px solid green;
+    /* border:1px solid green; */
     margin: auto;
     
 }
@@ -92,3 +100,41 @@
     margin: auto;
     justify-content: space-between;
 }
+.hrline{
+    width:254px;
+    margin: auto;
+}
+.itemoffer{
+    width:255px;
+    height:20px;
+    margin: auto;
+    display: flex;
+    /* border:1px solid red; */
+    align-items: center;
+}
+
+.offerlogo{
+    width:10%;
+    /* border:1px solid green; */
+   
+
+}
+.offerlogoimg{
+    width:100%;
+    height:100%;
+    
+}
+
+.itemofferrate{
+    width:90%;
+    height:20px;
+    /* border:1px solid red; */
+}
+
+.itemquickview{
+    width:254px;
+    margin: auto;
+    text-align: center;
+}
+
+
