--- a/src/components/Product.module.css
+++ b/src/components/Product.module.css
@@ -4,29 +4,64 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.homecoro{
+    height:340px;
+    width:100%;
+    background-color: #171A29;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 36px;
+    margin-top: 90px;
+    
+}
+.homecoro > div{
+    width:260px;
+    height:260px;
+    /* background-color: teal; */
+}
+.homecoro > div > img{
+    width:100%;
+    height: 100%;
+}
+.homecoro > div:hover{
+    /* box-shadow: 5px 5px 15px 15px  #888888; */
+    box-shadow: 5px 5px 15px 15px black;
 }
 .maincont{
     width:100%;
 }
+.rescount{
+    font-size: 25px;;
+    color:#282C3F;
+    font-weight: bold;
+    padding-top: 7px;
+}
 .filterdiv{
     width:90%;
-    border:1px solid red;
+    /* border:1px solid red; */
     height:50px;
     margin: auto;
     display: flex;
+    border-bottom: 1px solid grey;
 }
 .filterleft{
     width:20%;
-    border:1px solid yellowgreen
+    /* border:1px solid yellowgreen */
 }
 .filterright{
     width:80%;
-    border:1px solid blue;
+    /* border:1px solid blue; */
+    /* margin-top: 20px; */
 }
 .filterlistdiv{
     width:80%;
-    border:1px solid blue;
+    /* border:1px solid blue; */
    margin-left: 20%;;
+    padding-top: 16px;
 }
  .ul{
     display: flex;
@@ -36,11 +71,15 @@
 }
 .ul > li{
     list-style-type: none;
+    
 } 
 .ul > li > button{
     border: none;
     cursor: pointer;
     background: none;
+    color: #686B7B;
+    font-size: 16px;
+    font-weight: 400;
 }
 
 
@@ -54,21 +93,30 @@
     display: flex;
     flex-wrap: wrap;
     margin-top: 50px;;
+    background-color:#FFFFFF;
 }
 .itemdiv{
     width:298px;
-    height:376px;
+    height:382px;
     /* border:1px solid brown; */
-    margin:0px 0px 85px;
+    /* margin:0px 0px 85px; */
+    margin-bottom: 20px;
+    cursor: pointer;
+  
+    
 }
 .itemdiv:hover{
-    border: 1px solid grey;
+    border: 0.1px ;
+    box-shadow: 5px 5px 15px 15px  whitesmoke;
+   
+   
 }
 .imgdiv{
     width:254px;
     height:160px;
     /* border:1px solid green; */
     margin: auto;
+    margin-top: 20px;
     
 }
 .imgdiv > img{
@@ -81,15 +129,18 @@
     font-size: 17px;;
     color:#282C3F;
     margin: auto;
-    border:1px solid green
+    /* border:1px solid green; */
+    font-weight: 500;
+    margin-top: 15px;
 }
 .itemcategory{
     width:254px;
     height: 15.60px;
     margin: auto;
-    padding-left: 5px;;
-    font-size: 12px;;
-    border:1px solid green
+    color:#282C3F;
+    font-size: 14px;;
+    /* border:1px solid green; */
+    margin-top: 10px;
 }
 
 .itemdes{
@@ -99,6 +150,17 @@
     display: flex;
     margin: auto;
     justify-content: space-between;
+    margin-top: 18px;
+    color:#535665;
+    font-size: 12px;
+   
+}
+.rating{
+    background-color: #48C479;
+    padding:2px;
+    color:white;
+    padding-left: 3px;
+    padding-right: 5px;
 }
 .hrline{
     width:254px;
@@ -111,6 +173,12 @@
     display: flex;
     /* border:1px solid red; */
     align-items: center;
+    margin-top: 14px;
+    margin-bottom: 14px;
+    color: #8a584b;
+    font-weight: 300;
+
+   
 }
 
 .offerlogo{
@@ -135,6 +203,11 @@
     width:254px;
     margin: auto;
     text-align: center;
+    margin-top:14px;
+    color: blue;
+    font-size: 14px;
+    font-weight: 500;
+    /* display: none; */
 }
 
 
