--- a/src/components/Landing.module.css
+++ b/src/components/Landing.module.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     box-sizing: border-box;
     margin:0;
     padding:0;
@@ -62,4 +62,168 @@
     font-size: 25px;;
     color:grey;
     margin-top: 15px;
+} */
+
+
+*{
+    margin:0;
+    padding:0;
+}
+.landing{
+    width:100%;
+}
+.top{
+    width:100%;
+    display: flex;
+    height:450px;
+}
+.topleft{
+    width:60%;
+}
+.topright{
+    width:40%;
+}
+.topright > img{
+    width:100%;
+    height:100%;
+    background-size: cover;
+}
+
+.topleftinfo{
+    width:85%;
+    margin-top: 40px;
+    height:350px;
+    margin-left:8%;
+}
+.topleftinput{
+    width: 80%;
+    height: 15%;
+    margin-top: 4%;
+    background-color: white;
+    border: 1px solid gray;
+}
+.inputbtn{
+    height: 15.8%;
+    border: none;
+    background:#FC8019;
+    width: 18%;
+    color: white;
+    font-size: 18px;
+}
+.topleftbottom{
+color: gray;
+text-align: center;
+margin-top: 2%;
+}
+.toplefttitle{
+    width:100%;
+    display: flex;
+    justify-content: space-between;
+}
+.logoswiggy{
+    width:28%;
+}
+.logoswiggy>img{
+    width: 100%;
+}
+.loginsign{
+    width:25%;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+}
+.loginsign>button{
+    width: 50%;
+    border: none;
+    font-size: 20px;
+    background: white;
+}
+
+.headinghungry{
+    margin-top: 12%;
+    text-align: center;
+    
+}
+.topdes{
+    text-align: center;
+    font-size: 25px;;
+    color:grey;
+    margin-top: 15px;
+}
+.midbar{
+    width: 100%;
+    height: 400px;
+    background-color: #2B1E16;
+}
+.midbardesc{
+    display: flex;
+    
+}
+.midbardescription{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    text-align: center;
+    color: beige;
+    margin:4% 10%;
+}
+.midbardescription>img{
+    width: 105px;
+    height: 50%;
+}
+.footer{
+    display: flex;
+    height: 500px;
+    width: 100%;
+}
+.footerdesc {
+    margin-top: 12%;
+    width: 50%;
+    text-align: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.footerdesc>img {
+    width: 40%;
+    height: 50%;
+    margin-top: 5%;
+}
+
+.footerdesc2 {
+    width: 50%;
+    flex-direction: column;
+}
+
+.footerdesc2>img {
+    width: 50%;
+    height: 100%;
+}
+.footer2{
+    width: 100%;
+    height: 400px;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    align-items: center;
+    background-color:black;
+    justify-content: space-evenly;
+}
+.footer2desc{
+    width: 25%;
+    margin-top: 10%;
+    margin-bottom: 10%;
+
+}
+.footer2heading{
+    color: gray;
+}
+.footer2names{
+    color: white;
+    margin-top: 4%;
+}
+.footer2desc>img{
+    width: 60%;
+
 }
