--- a/src/components/ProductDetails.module.css
+++ b/src/components/ProductDetails.module.css
@@ -1,7 +1,293 @@
-.detailshead{
-    width:100%;
-    height:400px;
-    background-color: black;
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-/* .proddetailsmaindiv */
+
+
+.proddetailsmaindiv{
+    width:100%;
+    overflow-x: hidden;
+   
+   
+}
+.proddetails{
+    width:100%;
+    height:300px;
+    background-color: black;
+    display:flex;
+    justify-content: space-around;
+    margin-top: 90px;;
+    align-items: center;
+    
+
+}
+.first{
+    width:20%;
+    /* border:1px solid red; */
+}
+.second{
+    width:40%;
+    /* border:1px solid red; */
+}
+.third{
+    width:20%;
+    /* border:1px solid red; */
+}
+
+.firstimgdiv{
+    width:254px;
+    height:165px;
+    /* background-color: black;; */
+    margin: auto;
+
+}
+.firstimgdiv > img{
+    width:100%;
+    height:100%;
+}
+
+.secondcontdiv{
+    width:70%;
+    
+
+}
+.middlecontdiv{
+    width:100%;
+    height:175px;
+    /* border:1px solid yellow; */
+    padding:30px
+}
+.categorytext{
+    font-size: 28px;
+    color:#FFFFFF;
+}
+.categoryname{
+    font-size: 15px;
+    padding-top: 10px;
+    color: #686B7B;
+}
+
+.secondflexcont{
+    display:flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    color: #FFFFFF
+}
+
+.midledesflex{
+    font-size: 12px;;
+    color:#686B7B;
+    padding-top: 10px;
+}
+
+.thirdofferdiv{
+    width:255px;
+    height:165px;
+    /* border:1px solid red */
+}
+.thirdofferdiv > p{
+    padding:15px;
+    text-align: center;
+    color:#FFFFFF;
+    font-size: 16px;;
+}
+
+
+/* searching */
+
+.searchingmaindiv{
+    width:100%;
+  margin-left: 50%;
+  text-align: center;
+  margin-top: 30px;
+    
+}
+.searchingmaindiv > div{
+    width:100px;
+    padding:10px;
+    background-color: #FFFFFF;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: black;
+    border: 1px solid grey;
+    font-size: 20px;
+}
+.searchingmaindiv > div:hover{
+    color: #60B246;
+    cursor: pointer;
+}
+  
+
+
+
+.proflexdiv{
+    width:100%;
+    /* height:500px; */
+    /* border:1px solid black; */
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.firstpart{
+    width:23%;
+    /* border:1px solid red; */
+}
+.secondpart{
+    width:45%;
+    height:500px;
+    /* border:1px solid red; */
+    /* border-left: 1px solid grey; */
+}
+.thirdpart{
+    width:23%;
+    /* border:1px solid red; */
+}
+
+
+.catemaindiv{
+   width:50%;
+   height:300px;
+   /* border:1px solid red; */
+   margin:auto;
+   margin-top: 35px;
+  
+
+}
+.catemaindiv > div{
+    padding:10px;
+    padding-left: 20px;
+}
+.catemaindiv > div:hover{
+    color:orange;
+    font-size: 16px;;
+    cursor: pointer;
+}
+
+
+/* middle flex */
+
+/* .secondpart{
+    cursor: all-scroll;
+} */
+
+.resultitemdiv{
+    width:90%;
+    /* border:1px solid green; */
+    margin: auto;
+    margin-bottom: 30px;
+   margin-top: 15px;
+   /* border-left: 1px solid grey */
+}
+
+.itemdataflex{
+    width:100%;
+    display: flex;
+}
+
+.itemdivflexleft{
+    width:70%;
+    /* border:1px solid blue */
+}
+.itemdivflexright{
+    width:30%;
+    /* border:1px solid blue */
+}
+
+.rightimgdivflex{
+    width:85%;
+    height:100px;
+    margin: auto;
+    /* border:1px solid brown */
+}
+.rightimgdivflex > img{
+    width:100%;
+    height: 100%;;
+}
+.rightbtndivflex{
+    width:80px;
+    height:30px;
+    margin: auto;
+    background-color: #FFFFFF;
+    color:#60B246;
+    border-radius: 2px;
+    border: 1px solid grey;
+    font: bolder;
+}
+.rightbtndiv{
+    margin-left: 40px;
+}
+.titlemidleflex{
+    font-size: 20px;
+    color: black;
+    padding:10px;
+    font: bolder;
+}
+.square{
+   font-size: 24px;
+   padding: 8px;
+}
+.squarename{
+    font-size: 18px;;
+    color: #3E4152;
+    padding-left: 10px;
+    font-weight: 400;
+    padding-bottom: 10px;
+}
+.squareprice{
+    font-size:15px ;
+    color:#3E4152; ;
+    padding-left: 10px;
+}
+.squaredes{
+    font-size: 14px;;
+    color: #282C3F73;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+.lengthname{
+    padding-left: 32px;
+    padding-top: 16px;
+    font-size: 18px;;
+}
+
+/* last flex div */
+.productcartdiv{
+    width:90%;
+    margin:auto;
+    /* border:1px solid green; */
+    height:300px;
+
+}
+.subtotaldiv{
+    display: flex;
+    width:100%;
+   justify-content: space-between;
+   margin-top: 20px;
+}
+.checkoutbtndiv{
+    width:100%;
+    color:#FFFFFF;
+    background-color: #60B246;
+  margin-top: 45px;
+    text-align: center;
+    padding:20px
+}
+/* .carttitle{
+    margin-top: 20px;
+} */
+.carttitleitem{
+    margin-top: 12px;
+}
+.prodlistitem{
+    display: flex;
+    width:100%;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+.prodlistitem > div{
+    width:25%;
+}
