--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -62,3 +62,21 @@
 .ul > li:hover{
     color:#FFA700
 }
+.carno{
+    display:flex
+}
+
+span > img{
+    width:23px;
+   
+}
+.cartcout{
+    background-color: #48C479;
+    margin-left: 10px;
+    /* padding:1px; */
+    padding-left: 2px;
+    padding-right: 2px;
+    color: #FFFFFF;
+    border-radius: 3px;
+    
+}
