--- a/src/components/ProductDetails.module.css
+++ b/src/components/ProductDetails.module.css
@@ -133,7 +133,7 @@
 }
 
 .firstpart{
-    width:23%;
+    width:20%;
     /* border:1px solid red; */
 }
 .secondpart{
@@ -143,7 +143,7 @@
     /* border-left: 1px solid grey; */
 }
 .thirdpart{
-    width:23%;
+    width:30%;
     /* border:1px solid red; */
 }
 
@@ -290,4 +290,10 @@
 }
 .prodlistitem > div{
     width:25%;
+}
+
+.btnpara > button{
+    padding: 1px;
+    padding-left: 2px;
+    width: 20px;
 }
