--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -13,7 +13,11 @@
     background-color: white;
     box-shadow: 5px 10px 5px #868787;
     padding: 50px;
-    margin-top: 110px;
+    margin-top: 120px;
+    margin-bottom: 170px;
+    }
+    .box:hover{
+        cursor: pointer;
     }
     
     .header{
@@ -78,6 +82,9 @@
         font-size: 15px;
         font-weight: 500;
         font-weight: 500;
+    }
+    .btn:hover{
+        cursor: pointer;
     }
     
     .footText{
