--- a/src/components/Register.module.css
+++ b/src/components/Register.module.css
@@ -19,9 +19,11 @@ body{
     box-shadow: 5px 10px 5px #868787;
     padding: 40px;
     margin-top: 140px;
+    margin-bottom: 120px;
    
-    
-    
+    }
+    .box:hover{
+        cursor: pointer;
     }
     
     .header{
@@ -105,6 +107,9 @@ body{
         font-size: 15px;
         font-weight: 500;
         font-weight: 500;
+    }
+    .btn:hover{
+        cursor: pointer;
     }
     
     .footText{
