--- a/src/components/Landing.module.css
+++ b/src/components/Landing.module.css
@@ -94,6 +94,10 @@
     margin-top: 40px;
     height:350px;
     margin-left:8%;
+    
+}
+.signinbtn{
+    color:black;
 }
 .topleftinput{
     width: 80%;
