--- a/src/components/ProductDetails.module.css
+++ b/src/components/ProductDetails.module.css
@@ -285,17 +285,39 @@
     margin-top: 12px;
 }
 .prodlistitem{
-    display: flex;
+    display: grid;
+    grid-template-columns: 50% 20% 5% 10%;
     width:100%;
-    justify-content: space-between;
+    /* justify-content: space-evenly; */
     margin-top: 20px;
 }
-.prodlistitem > div{
-    width:25%;
-}
+/* .prodlistitem > div{
+    width:35%;
+} */
 
-.btnpara > button{
+/* .btnpara > button{
     padding: 1px;
     padding-left: 2px;
     width: 20px;
+} */
+
+.incbtn{
+    background-color: #60B246;
+    width:30%;
+    color:#FFFFFF;
+    border: 1px solid black;
+    height:30px
+    
+}
+.incbtn1{
+    background-color: #60B246;
+    width:30%;
+    color:#FFFFFF;
+    border: 1px solid black;
+    height:30px;
+    margin-left: 4px;
+}
+
+.spanflexcol{
+    color:#FFFFFF
 }
