--- a/src/components/Checkout.css
+++ b/src/components/Checkout.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
   }
   .maincheckdiv{
-    width:70%;
+    width:80%;
   
     margin:auto;
     margin-bottom: 80px;
@@ -78,6 +78,20 @@
     cursor: pointer;
     font-size: 17px;
   }
+  .paydiv{
+    width:160px;
+    margin: auto;
+    background-color: #04AA6D;
+    /* border:2px solid red; */
+    text-align: center;
+    height:45px;
+    padding:10px;
+    font-size: 18px;;
+    color:#FFFFFF
+  }
+  .paydiv:hover{
+    cursor:pointer
+  }
   
   .btn:hover {
     background-color: #45a049;
@@ -94,6 +108,12 @@
   span.price {
     float: right;
     color: grey;
+  }
+  .gotohome{
+    width:40px;
+    height:30px;
+    background-color: #04AA6D;
+    margin: auto;
   }
   
   /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (also change the direction - make the "cart" column go on top) */
