--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -11,7 +11,7 @@
     height: 480px;
     margin: auto;
     background-color: white;
-    box-shadow: 5px 10px 5px #868787;
+    box-shadow: 2px 5px 5px 5px #868787;
     padding: 50px;
     margin-top: 120px;
     margin-bottom: 170px;
