--- a/src/components/Register.module.css
+++ b/src/components/Register.module.css
@@ -19,7 +19,7 @@
     width: 700px;
     margin: auto;
     background-color: white;
-    box-shadow: 5px 10px 5px #868787;
+    box-shadow: 2px 5px 5px 5px #868787;
     padding: 40px;
     margin-top: 140px;
     margin-bottom: 120px;
@@ -68,10 +68,15 @@
     /* .formField{
         width: 100%;
     } */
+
+    .formField{
+        width:60%;
+        /* border:2px solid green; */
+    }
     
      .entry{
-        width:60%;
-        height: 25px;
+        width:100%;
+        height: 55px;
         border: 0.5px solid rgb(162,163,172);
         display: flex;
         padding: 20px;
@@ -79,6 +84,7 @@
         text-align: left;
         justify-content:left;
         margin-left: -1%;
+        margin-top: 10px;
     }
      
 /*   
