--- a/src/components/Checkout.css
+++ b/src/components/Checkout.css
@@ -46,6 +46,7 @@
     padding: 5px 20px 15px 20px;
     border: 1px solid rgb(56, 8, 8);
     border-radius: 3px;
+    /* width:200px; */
   }
   
   input[type=text] {
@@ -115,6 +116,12 @@
     background-color: #04AA6D;
     margin: auto;
   }
+
+  .cartcontdiv{
+    /* width:80%;; */
+    border:2px solid green;
+  }
+
   
   /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (also change the direction - make the "cart" column go on top) */
   @media (max-width: 800px) {
