--- a/src/components/Checkout.css
+++ b/src/components/Checkout.css
@@ -2,11 +2,11 @@
     box-sizing: border-box;
   }
   .maincheckdiv{
-    width:80%;
+    width:70%;
   
     margin:auto;
     margin-bottom: 80px;
-    margin-top: 120px;
+    margin-top: 100px;
     /* background-color: aqua; */
   
   }
@@ -17,7 +17,9 @@
     -ms-flex-wrap: wrap; /* IE10 */
     flex-wrap: wrap;
     margin: 0 -16px;
-    /* background-color: whitesmoke; */
+    background-color: #FFFFFF;
+    /* background-color: red; */
+    padding-top: 20px;
   }
   
   .col-25 {
@@ -42,11 +44,14 @@
   }
   
   .container {
-    background-color: #8d8585;
+    /* background-color:#FFFFFF; */
+    /* background-color: #8d8585; */
     padding: 5px 20px 15px 20px;
-    border: 1px solid rgb(56, 8, 8);
+    /* border: 1px solid rgb(56, 8, 8); */
     border-radius: 3px;
+    box-shadow: 2px 5px 10px 5px grey;
     /* width:200px; */
+    margin:0px
   }
   
   input[type=text] {
@@ -108,7 +113,7 @@
   
   span.price {
     float: right;
-    color: grey;
+    color: black;
   }
   .gotohome{
     width:40px;
@@ -120,6 +125,12 @@
   .cartcontdiv{
     /* width:80%;; */
     border:2px solid green;
+  }
+
+  .abh{
+    width:100%;
+    height:700px;
+    background-color:#E9ECEE;
   }
 
   
